feat: page layouts

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ NEXT_PUBLIC_APP_Name="Illuminatory"
 
 # App URL
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
+
+# App GitHub Repository URL
+NEXT_PUBLIC_APP_GITHUB_REPO_URL="https://github.com/aryagustiana101/illuminatory"
+
+# App Developer
+NEXT_PUBLIC_APP_DEVELOPER="Gustiana Software"
